Add a Moby Dick page and a menu

--- a/tags.html
+++ b/tags.html
@@ -6,6 +6,12 @@
   </head>
   <body>
 
+    <div>
+      <a href="index.html">Home</a>
+      <a href="tags.html">HTML Tags</a>
+      <a href="moby_dick.html">Moby Dick</a>  
+    </div>
+
     <h1>Important HTML Tags</h1>
 
     <a href="https://www.flickr.com/photos/jdhancock/3814523970">
@@ -55,6 +61,16 @@
        <td><code>td</code></td>
        <td>table data</td>
        <td>include a table data cell</td>
+     </tr>
+     <tr>
+       <td><code>div</code></td>
+       <td>division</td>
+       <td>create division</td>
+     </tr>
+     <tr>
+       <td><code>header</code></td>
+       <td>header</td>
+       <td>create header</td>
      </tr>
     </table>
 
@@ -116,6 +132,17 @@
          </code>
        </td>
        <td><code>strong</code></td>
+     </tr>
+     <tr>
+       <td><code>span</code></td>
+       <td>span</td>
+       <td>mark up a part of text</td>
+       <td>
+         <code>
+           &lt;span&gt;text&lt;/span&gt;
+         </code>
+       </td>
+       <td><span>text</span></td>
      </tr>
     </table>
 
