--- a/moby_dick.html
+++ b/moby_dick.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title>Moby Dick</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
 
   <!-- much here to be styled, will do so in last section -->
-  <div style="text-align: right;">
-    <a href="index.html" style="color: blue; text-decoration: none;">Home</a>
-    <a href="tags.html" style="margin: 0 0 0 10px;">HTML Tags</a>
-    <a href="moby_dick.html"  style="margin: 0 0 0 10px;">Moby Dick</a>
+  <div id="main-nav" class="nav-menu">
+    <a href="index.html">Home</a>
+    <a href="tags.html" class="nav-spacing">HTML Tags</a>
+    <a href="moby_dick.html" class="nav-spacing">Moby Dick</a>
   </div>
 
   <header style="text-align: center; margin: 0 0 80px">
