--- a/tags.html
+++ b/tags.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Tags</title>
+    <link rel="stylesheet" href="./css/main.css">
   </head>
   <body>
 
-    <div style="text-align: right;">
+    <div id="main-nav" class="nav-menu">
       <a href="index.html">Home</a>
-      <a href="tags.html" style="margin: 0 0 0 10px;">HTML Tags</a>
-      <a href="moby_dick.html"  style="margin: 0 0 0 10px;">Moby Dick</a>
+      <a href="tags.html" class="nav-spacing">HTML Tags</a>
+      <a href="moby_dick.html" class="nav-spacing">Moby Dick</a>
     </div>
-
     <h1>Important HTML Tags</h1>
 
     <a href="https://www.flickr.com/photos/jdhancock/3814523970">
